--- a/FYP/static/css/footer.css
+++ b/FYP/static/css/footer.css
@@ -97,7 +97,7 @@ a:focus {
   height: 45px;
   width: 250px !important;
   margin-top: 10px;
-  background: #00eeb6;
+  background: #FFCC99;
   border: rgb(0, 0, 0);
   padding: 3px 53px;
 }
@@ -123,7 +123,7 @@ input[type="button"] {
   font-size: 12px;
   border: none;
   outline: none;
-  background-color: #00eeb6;
+  background-color: #FFCC99;
   color: white;
   cursor: pointer;
   border-radius: 4px;
