--- a/FYP/templates/admin_layout.html
+++ b/FYP/templates/admin_layout.html
@@ -38,7 +38,7 @@
     <div class="container-fluid">
 
         <a href="/admins"><img src="{% static 'images/site-iconG.png' %}" alt="HRM" width="58" height="38" /></a>
-            <div class="content" style="background-color: #00eeb6;  color:#fff;">
+            <div class="content" style="background-color: #FFCC99;  color:#fff;">
         <button type="button" id="sidebarCollapse" class="btn btn-white" >
             <i class="fa fa-bars" aria-hidden="true"></i>
         </button>
@@ -47,7 +47,7 @@
 
             <div class="d-none d-sm-block topbar-divider"></div>
             <button class="btn btn-sm hover welcome">
-                <a href="">Welcome, Admin <span style="color:#00eeb6"> @{{ request.user.username }}</span>
+                <a href="">Welcome, Admin <span style="color:#FFCC99"> @{{ request.user.username }}</span>
                 </a>
             </button>
 
@@ -65,7 +65,7 @@
         </div>
         <ul class="list-unstyled components">
             <li>
-                <a href="/admins" class="{{ activate_adminhome }}" aria-expanded="false">
+                <a href="/admins/dashboard" class="{{ activate_adminhome }}" aria-expanded="false">
                     <i class="fa fa-home" aria-hidden="true"></i>
                     Dashboard
                 </a>
@@ -85,22 +85,9 @@
             </li>
 
             <li>
-                <a href="/admins/category" aria-expanded="false" class="{{ activate_category }}">
-                    <i class="fa fa-th-large" aria-hidden="true"></i>
-                    My Profile
-                </a>
-            </li>
-
-            {% comment %} <li>
-                <a href="/admins/alladmins" class="{{ activate_admins }}" aria-expanded="false">
-                    <i class="fa fa-users" aria-hidden="true"></i>
-                    Notifica
-                </a>
-            </li> {% endcomment %}
-            <li>
                 <a href="/admins/get_feedback" aria-expanded="false" class="{{ activate_feedback }}">
                     <i class="fas fa-comments-dollar"></i>
-                    Feedback
+                    Department
                 </a>
             </li>
             <li>
