--- a/FYP/templates/employee_layout.html
+++ b/FYP/templates/employee_layout.html
@@ -38,7 +38,7 @@
     <div class="container-fluid">
 
         <a href="/admins"><img src="{% static 'images/site-iconG.png' %}" alt="HRM" width="58" height="38" /></a>
-            <div class="content" style="background-color: #00eeb6;  color:#fff;">
+            <div class="content" style="background-color: #FFCC99;  color:#fff;">
         <button type="button" id="sidebarCollapse" class="btn btn-white" >
             <i class="fa fa-bars" aria-hidden="true"></i>
         </button>
@@ -47,7 +47,7 @@
 
             <div class="d-none d-sm-block topbar-divider"></div>
             <button class="btn btn-sm hover welcome">
-                <a href="">Welcome,  <span style="color:#00eeb6"> {{ request.user.username }}</span>
+                <a href="">Welcome,  <span style="color:#FFCC99"> {{ request.user.username }}</span>
                 </a>
             </button>
 
@@ -65,7 +65,7 @@
         </div>
         <ul class="list-unstyled components">
             <li>
-                <a href="/admins" class="{{ activate_adminhome }}" aria-expanded="false">
+                <a href="/employee/dashboard" class="{{ activate_adminhome }}" aria-expanded="false">
                     <i class="fa fa-home" aria-hidden="true"></i>
                     Dashboard
                 </a>
@@ -91,18 +91,7 @@
                 </a>
             </li>
 
-            {% comment %} <li>
-                <a href="/admins/alladmins" class="{{ activate_admins }}" aria-expanded="false">
-                    <i class="fa fa-users" aria-hidden="true"></i>
-                    Notifica
-                </a>
-            </li> {% endcomment %}
-            <li>
-                <a href="/admins/get_feedback" aria-expanded="false" class="{{ activate_feedback }}">
-                    <i class="fas fa-comments-dollar"></i>
-                    Feedback
-                </a>
-            </li>
+
             <li>
                 <a href="{% url 'signout'  %}" onclick="return confirm('Are you sure want to logout?')" id="logout" aria-expanded="false">
                     <i class="fa fa-sign-out-alt" aria-hidden="true" ></i>
@@ -187,7 +176,7 @@
                         <h6>Any Suggestions?</h6>
                         <div class="footer-newsletter">
                             <p>Feel free to write any complaints or suggestions.<i class="fa fa-angellist" aria-hidden="true"></i></p>
-                                <input type="Textarea" placeholder="Write a message.">
+                                <input type="email" placeholder="Write a message.">
                                 <button class="btn-secondary submit-btn" type="submit"> <span><i class="fa fa-check"  aria-hidden="true"></i></span> &nbsp;Submit </button>                                        
                             </form>
                         </div>
