admin information section updated

--- a/FYP/HRM/templates/HRM/homepage.html
+++ b/FYP/HRM/templates/HRM/homepage.html
@@ -9,10 +9,63 @@
 {% block content %}
 
 
+<head>
+    <title>HRM Home Page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+  <div class="pt-5 pb-5">
+    <div class="container p-5">
+      <div class="row">
+        <div class="section-head col-sm-12">
+          <h4><span >Why </span> HRM Suite?</h4>
+          <p>Human Resources Management Suite is a software application that aims to simplify the day- to-day administration and to allocate the resources efficiency. This application can be designed by including various features which helps in knowing the workforce better and results in smooth communication and hassle-free work environment.</p>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="item"> <span class="icon feature_box_col_one"><i class="fa fa-calendar-times"></i></span>
+            <h6>Leave Management</h6>
+            <p>The employees can go through the calendar and apply for leave using the functionality on the employee panel.</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="item"> <span class="icon feature_box_col_two"><i class="fa fa-anchor"></i></span>
+            <h6>Friendly Design</h6>
+            <p>The usabilty of our website is good as well as thevinterface is user friendly which makes it simple to use for all types of users. </p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="item"> <span class="icon feature_box_col_three"><i class="fa fa-clock"></i></span>
+            <h6>Attendence</h6>
+            <p>The attendence funtion allows the company to keep track of their employees to know whether they are present or not.</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="item"> <span class="icon feature_box_col_four"><i class="fa fa-bell"></i></span>
+            <h6>Notification System</h6>
+            <p>The notification system helps the employees to be notified by any notification updated by the admin.</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="item"> <span class="icon feature_box_col_five"><i class="fa fa-user"></i></span>
+            <h6>User Profile</h6>
+            <p>In this section, the employees can updated their personal information and write a bio if intersted.</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <div class="item"> <span class="icon feature_box_col_six"><i class="fa fa-desktop"></i></span>
+            <h6>Web Based</h6>
+            <p>It is a web based application,i t has become an innovative way for enterprises to do business focusing on the services.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
 
-<h1>Hello Its Home page</h1>
-
-
+<script type="rocketlazyloadscript" data-minify="1" src="https://codes4education.com/wp-content/cache/min/1/jquery-3.5.1.slim.min.js?ver=1649400599" crossorigin="anonymous" defer></script>
+<script type="rocketlazyloadscript" data-minify="1" src="https://codes4education.com/wp-content/cache/min/1/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js?ver=1649403993" crossorigin="anonymous" defer></script>
+<script>class RocketElementorAnimation{constructor(){this.deviceMode=document.createElement("span"),this.deviceMode.id="elementor-device-mode",this.deviceMode.setAttribute("class","elementor-screen-only"),document.body.appendChild(this.deviceMode)}_detectAnimations(){let t=getComputedStyle(this.deviceMode,":after").content.replace(/"/g,"");this.animationSettingKeys=this._listAnimationSettingsKeys(t),document.querySelectorAll(".elementor-invisible[data-settings]").forEach(t=>{const e=t.getBoundingClientRect();if(e.bottom>=0&&e.top<=window.innerHeight)try{this._animateElement(t)}catch(t){}})}_animateElement(t){const e=JSON.parse(t.dataset.settings),i=e._animation_delay||e.animation_delay||0,n=e[this.animationSettingKeys.find(t=>e[t])];if("none"===n)return void t.classList.remove("elementor-invisible");t.classList.remove(n),this.currentAnimation&&t.classList.remove(this.currentAnimation),this.currentAnimation=n;let s=setTimeout(()=>{t.classList.remove("elementor-invisible"),t.classList.add("animated",n),this._removeAnimationSettings(t,e)},i);window.addEventListener("rocket-startLoading",function(){clearTimeout(s)})}_listAnimationSettingsKeys(t="mobile"){const e=[""];switch(t){case"mobile":e.unshift("_mobile");case"tablet":e.unshift("_tablet");case"desktop":e.unshift("_desktop")}const i=[];return["animation","_animation"].forEach(t=>{e.forEach(e=>{i.push(t+e)})}),i}_removeAnimationSettings(t,e){this._listAnimationSettingsKeys().forEach(t=>delete e[t]),t.dataset.settings=JSON.stringify(e)}static run(){const t=new RocketElementorAnimation;requestAnimationFrame(t._detectAnimations.bind(t))}}document.addEventListener("DOMContentLoaded",RocketElementorAnimation.run);
+</script>
+</body>
 
 
 
