department section added :fire:

--- a/FYP/admins/templates/admins/adminDashboard.html
+++ b/FYP/admins/templates/admins/adminDashboard.html
@@ -43,7 +43,7 @@ Admin Dashboard | HRM
           </div>
 
           <div class="col-lg-6 col-md-6 col-xl-4 mb-4">
-            <a href="/admins/category">
+            <a href="/admins/department">
               <div class="card shadow border-0 py-2">
                 <div class="card-body">
                   <div class="row align-items-center no-gutters">
