--- a/FYP/templates/admin_layout.html
+++ b/FYP/templates/admin_layout.html
@@ -85,7 +85,7 @@
             </li>
 
             <li>
-                <a href="/admins/get_feedback" aria-expanded="false" class="{{ activate_feedback }}">
+                <a href="/admins/department" aria-expanded="false" class="{{ activate_department }}">
                     <i class="fas fa-comments-dollar"></i>
                     Department
                 </a>
