--- a/FYP/templates/employee_layout.html
+++ b/FYP/templates/employee_layout.html
@@ -93,7 +93,7 @@
 
 
             <li>
-                <a href="{% url 'signout'  %}" onclick="return confirm('Are you sure want to logout?')" id="logout" aria-expanded="false">
+                <a href="{% url 'signout'  %}" onclick="confirm('Are you sure want to logout?')" id="logout" aria-expanded="false">
                     <i class="fa fa-sign-out-alt" aria-hidden="true" ></i>
                     Sign Out
                 </a>
