made CRUD employee profiles

--- a/FYP/admins/templates/admins/adminDashboard.html
+++ b/FYP/admins/templates/admins/adminDashboard.html
@@ -23,7 +23,7 @@ Admin Dashboard | HRM
 
         <div class="row">
           <div class="col-lg-6 col-md-6 col-xl-4 mb-4">
-            <a href="/admins/get_allorders">
+            <a href="/admins/employee">
               <div class="card shadow border-0 py-2">
                 <div class="card-body">
                   <div class="row align-items-center no-gutters">
