--- a/FYP/templates/admin_layout.html
+++ b/FYP/templates/admin_layout.html
@@ -65,7 +65,7 @@
         </div>
         <ul class="list-unstyled components">
             <li>
-                <a href="/admins/dashboard" class="{{ activate_adminhome }}" aria-expanded="false">
+                <a href="/admins/dashboard" class="{{ activate_dashboard }}" aria-expanded="false">
                     <i class="fa fa-home" aria-hidden="true"></i>
                     Dashboard
                 </a>
@@ -79,19 +79,19 @@
             </li>
 
             <li>
-                <a href="/admins/employee" class="{{ activate_orders }}" aria-expanded="false">
+                <a href="/admins/employee" class="{{ activate_employee }}" aria-expanded="false">
                     <i class="fas fa-box-open" aria-hidden="true"></i>
                     Employee
                 </a>
             </li>
             <li>
-                <a href="/admins/attendence" class="{{ activate_services }}" aria-expanded="false">
+                <a href="/admins/attendence" class="{{ activate_attendence }}" aria-expanded="false">
                     <i class="fas fa-cogs" aria-hidden="true"></i>
                     Attendence 
                 </a>
             </li>
             <li>
-                <a href="/admins/leave" class="{{ activate_services }}" aria-expanded="false">
+                <a href="/admins/leave" class="{{ activate_leave }}" aria-expanded="false">
                     <i class="fas fa-cogs" aria-hidden="true"></i>
                     Leave Management 
                 </a>
