--- a/FYP/templates/employee_layout.html
+++ b/FYP/templates/employee_layout.html
@@ -65,27 +65,27 @@
         </div>
         <ul class="list-unstyled components">
             <li>
-                <a href="/employee/dashboard" class="{{ activate_adminhome }}" aria-expanded="false">
+                <a href="/employee/dashboard" class="{{ activate_dashboard }}" aria-expanded="false">
                     <i class="fa fa-home" aria-hidden="true"></i>
                     Dashboard
                 </a>
             </li>
 
             <li>
-                <a href="/admins/get_allorders" class="{{ activate_orders }}" aria-expanded="false">
+                <a href="/employee/leave" class="{{ activate_leave }}" aria-expanded="false">
                     <i class="fas fa-box-open" aria-hidden="true"></i>
                     Leave Manangement
                 </a>
             </li>
             <li>
-                <a href="/admins/get_allservices" class="{{ activate_services }}" aria-expanded="false">
+                <a href="/employee/attendance" class="{{ activate_attendance }}" aria-expanded="false">
                     <i class="fas fa-cogs" aria-hidden="true"></i>
-                    Attendence 
+                    Attendance 
                 </a>
             </li>
 
             <li>
-                <a href="/admins/category" aria-expanded="false" class="{{ activate_category }}">
+                <a href="/employee/employeeprofile" aria-expanded="false" class="{{ activate_profile }}">
                     <i class="fa fa-th-large" aria-hidden="true"></i>
                     My Profile
                 </a>
