--- a/FYP/employee/templates/employee/attendance.html
+++ b/FYP/employee/templates/employee/attendance.html
@@ -1,7 +1,7 @@
 {% extends 'employee_layout.html' %} {% load static%} {%load bootstrap%} {% block title %}
 
 
-Employee Dashboard | HRM
+Employee Attendance | HRM
 
 {% endblock title%}
 
@@ -10,7 +10,7 @@ Employee Dashboard | HRM
 
 
 
-<h1>Employee</h1>
+<h1>attendance</h1>
 
 
 
