--- a/FYP/authentications/templates/authentications/login.html
+++ b/FYP/authentications/templates/authentications/login.html
@@ -196,13 +196,13 @@
 
 
 
-        <div class="text-center mb-2">
+        <!-- <div class="text-center mb-2">
           Don't have an account? <br> 
           <a href="/auth/signup" class="register-link">
           Register
             <br />
           </a>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
