--- a/FYP/employee/templates/employee/employeeProfile.html
+++ b/FYP/employee/templates/employee/employeeProfile.html
@@ -1,4 +1,4 @@
-{% extends 'employee_layout.html' %} {% load static%} {%load bootstrap%} {% block title %}
+{% extends 'employee_layout.html' %} {% load static%} {%load bootstrap%} {% load crispy_forms_tags %} {% block title %}
 
 
 Employee Profile | HRM
