--- a/FYP/templates/admin_layout.html
+++ b/FYP/templates/admin_layout.html
@@ -91,7 +91,7 @@
                 </a>
             </li>
             <li>
-                <a href="/admins/leave" class="{{ activate_leave }}" aria-expanded="false">
+                <a href="/admins/leave_management/" class="{{ activate_leave }}" aria-expanded="false">
                     <i class="fas fa-cogs" aria-hidden="true"></i>
                     Leave Management 
                 </a>
