--- a/FYP/admins/templates/admins/addEmployee.html
+++ b/FYP/admins/templates/admins/addEmployee.html
@@ -1,5 +1,5 @@
 
-{% extends 'admin_layout.html' %} {% load bootstrap %} {% load static %} {% load crispy_forms_tags %} {%block title%}Update Categories | Admin Gharelu {%endblock title %} {%block main %}
+{% extends 'admin_layout.html' %} {% load bootstrap %} {% load static %} {% load crispy_forms_tags %} {%block title%}Add Employee|  Admin HRM {%endblock title %} {%block main %}
 
 
 
@@ -9,6 +9,13 @@
 <h1 class="mb-2">You are adding new employee!</h1>
 {% csrf_token %}
 {{ form | bootstrap }}
+<label for="dep">Department:</label>
+<select id="dep" name="dep">
+    {% for dt  in department %}
+    <option value="{{dt.name}}">{{dt.name}}</option>
+    {% endfor %}
+
+</select>
 <br>
 <button class="w-100 btn btn-primary" type="submit">Add New Employee</button>
 <hr class="my-4">
