--- a/FYP/employee/templates/employee/leave.html
+++ b/FYP/employee/templates/employee/leave.html
@@ -8,10 +8,140 @@ Employee Dashboard | HRM
 
 {% block main %}
 
+    <div class="main-panel">
+        <div class="content-wrapper">
+            <div class="row">
+                <nav aria-label="breadcrumb" class="mt-4">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item">Dashboard</li>
+                        <li class="breadcrumb-item active" aria-current="page">Leave Management </li>
+                    </ol>
+      {% include 'message.html'%}
+
+                </nav>
+                <div class="col-lg-12 grid-margin">
 
 
-<h1>Leave</h1>
+                    <div class="card">
+                        <div class="card-body">
+                           <h4 class="text-center text-primary">Apply Leave </i></h4><hr>
+                                <form class="form-group" method="POST">
+                                    {% csrf_token %}
+                                        <div class="table-responsive">
+                                            <table class="table table-striped">
+                                                <thead>
+                                                    <tr>
+                                                         <th>
+                                                            User
+                                                        </th>
+                                                       
+                                                        <th>
+                                                            Start Date
+                                                        </th>
+                                                        
+                                                        <th>
+                                                            End Date
+                                                        </th>
+                                                        <th>
+                                                            Leave Type
+                                                        </th>
+                                                        <th>
+                                                            Reason
+                                                        </th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <td>
+                                                                {{request.user}}
+                                                        </td>
+                                                        
+                                                        <td class="py-1">
+                                                            {{form_leave.start}}
+                                                        </td>
+                                                        
+                                                        <td>
+                                                           {{form_leave.end}}
+                                                        </td>
+                                                        <td>
+                                                            {{form_leave.leavetype}}
+                                                        </td>
+                                                        <td>
+                                                            {{form_leave.reason}}
+                                                        </td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
 
+                                        
+                                    <div class="text-center mt-3">
+                                        <button class="btn btn-rounded btn-outline-success"><i class="mdi mdi-check"></i>Submit</button></button>
+                                    </div>
+                                </form><br>
+
+
+                            {% if form_leave %}
+                            <h4 class="text-center text-primary mt-4">Approved Leaves </h4><hr>
+
+                            <small class='text-center'>This is a list of approved Staffers leaves application. </small>
+                             <div class="table-responsive">
+                                            <table class="table table-striped">
+                                                <thead>
+                                                    <tr>
+                                                       
+                                                        <th>
+                                                            Start Date
+                                                        </th>
+                                                        
+                                                        <th>
+                                                            End Date
+                                                        </th>
+                                                        <th>
+                                                            Status
+                                                        </th>
+                                                        <th>
+                                                            Leave Type
+                                                        </th>
+                                                        <th>
+                                                            Reason
+                                                        </th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    {% for leave in leaves %}
+                                                        <tr>
+                                                            
+                                                            <td class="py-1">
+                                                            <strong>{{leave.start}}</strong>  
+
+                                                            </td>
+                                                            <td>
+                                                            <strong>{{leave.end}}</strong>  
+                                                            </td>
+                                                            <td>
+                                                            
+                                                                <span class="btn btn-success">{{leave.status}}</span>  
+                                                            </td>
+                                                            <td>
+                                                            {{leave.leavetype}}
+                                                            </td>
+                                                            <td>
+                                                                {{leave.reason}}
+                                                            </td>
+                                                        </tr>
+                                                    {% endfor %}
+                                                </tbody>
+                                            </table>
+                                        </div>
+                            {% else %}
+                                <p class="lead"> There are currently no leave application. </p>
+                            {% endif %}   
+                                
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 {% endblock %}
