--- a/FYP/employee/templates/employee/employeeProfile.html
+++ b/FYP/employee/templates/employee/employeeProfile.html
@@ -42,8 +42,14 @@ Employee Profile | HRM
 </style>
 
 <div style="margin-top: 1rem">
-  <h4 class="text-center">Your Profile</h4>
+  <nav aria-label="breadcrumb" class="mt-4">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"> <a href="/employee/dashboard" class="text-primary">Dashboard</a> </li>
+                        <li class="breadcrumb-item active" aria-current="page">Employee Profile </li>
+                    </ol>
+                </nav>
 
+  <h4 class="text-center">Your Profile</h4>
 
   <div class="container mb-4">
 
