--- a/FYP/employee/templates/employee/employeeUpdateProfile.html
+++ b/FYP/employee/templates/employee/employeeUpdateProfile.html
@@ -59,6 +59,13 @@ Employee Profile | HRM
 </style>
 
 <div class="container mb-5 mt-5">
+  <nav aria-label="breadcrumb" class="mt-4">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"> <a href="/employee/dashboard" class="text-primary">Dashboard</a> </li>
+                        <li class="breadcrumb-item active" aria-current="page"> <a href="/employee/employeeprofile" class="text-primary">Profile</a></li>
+                        <li class="breadcrumb-item active" aria-current="page">Employee Update Profile </li>
+                    </ol>
+                </nav>
   <h1 class="text-center mb-5">
     Update Employee Profile
   </h1>
