--- a/FYP/employee/templates/employee/attendance.html
+++ b/FYP/employee/templates/employee/attendance.html
@@ -1,4 +1,4 @@
-{% extends 'employee_layout.html' %} {% load static%} {%load bootstrap%} {% block title %}
+{% extends 'employee_layout.html' %} {% load static%} {%load bootstrap%} {% load crispy_forms_tags %} {% block title %}
 
 
 Employee Attendance | HRM
@@ -11,6 +11,83 @@ Employee Attendance | HRM
 
 
 <h1>attendance</h1>
+
+
+
+    <div class="main-panel">
+        <div class="content-wrapper">
+            <div class="row">
+                <nav aria-label="breadcrumb" class="mt-4">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"> <a href="/employee/dashboard" class="text-primary">Dashboard</a> </li>
+                        <li class="breadcrumb-item active" aria-current="page">Leave Management </li>
+                    </ol>
+                    {% include 'message.html'%}
+
+                </nav>
+                <div class="col-lg-12 grid-margin">
+
+
+                    <div class="card">
+                        <div class="card-body">
+                           <h4 class="text-center text-primary">Apply Leave </i></h4><hr>
+                                <form class="form-group" method="POST">
+                                    {% csrf_token %}
+                                        <!-- <div class="table-responsive">
+                                            <table class="table table-striped">
+                                                <thead>
+                                                    <tr>
+                                                         <th>
+                                                            User
+                                                        </th>
+                                                       
+                                                        <th>
+                                                             Date
+                                                        </th>
+                                                        
+                                                        <th>
+                                                            First In
+                                                        </th>
+                                                        <th>
+                                                            Status
+                                                        </th>
+                                                        
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr>
+                                                        <td>
+                                                                {{request.user}}
+                                                        </td>
+                                                        
+                                                        <td class="py-1">
+                                                            {{attendance.date}}
+                                                        </td>
+                                                        
+                                                        <td>
+                                                        </td>
+                                                        <td>
+                                                            {{attendance.status}}
+                                                        </td>
+                                                        
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div> -->
+
+                                        {{ attendance|crispy }}
+                                    <div class="text-center mt-3">
+                                        <button class="btn btn-rounded btn-outline-success"><i class="mdi mdi-check"></i>Submit</button></button>
+                                    </div>
+                                </form><br>
+
+                                
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 
 
